cicd/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.nexusscm.kro.kr
      secretName: nexus-tls
  rules:
    - host: www.nexusscm.kro.kr
      http:
        paths:
          - path: /()(actuator.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nexus-backend-service
                port:
                  number: 8080
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nexus-backend-service
                port:
                  number: 8080
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nexus-frontend-service
                port:
                  number: 80
